Fixed jumbotron alignment and updated nav border color

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ a {
  }
 
  .nav-item {
-     border-right: 1px solid rgb(85, 84, 84);
+     border-right: 1px solid #670025;
      margin: 5px;
      text-align: center;
  }
